# CRpi

./: .gitignore  CMakeLists.txt  CRpi.cbp  Doxyfile  Makefile  Readme.md  makefile_old
docs/: index.html
docs/html/: addressing_8c.html  addressing_8cpp.html  addressing_8h_source.html  annotated.html  cacheCoherentMemoryProvider_8cpp.html  cacheCoherentMemoryProvider_8h.html  cacheCoherentMemoryProvider_8h_source.html  clockManager_8cpp.html  clockManager_8h.html  clockManager_8h_source.html  dir_0fa9aa01048eb8a43e480f672339c31d.html  dir_5e7d457258874aaf9dabe6fd7863f814.html  dir_5eeb41dc68fde8b975ee60349ec9c69e.html  dir_78c19b7bad42d7b71475721b98eddc70.html  dir_7bf42cf3048ec3f6889f7ebe689a2262.html  dir_87d18a4dc5174905bfd7d2dc734defe6.html  dir_e79343dc3a7ca08c5f5f31854b5b843b.html  dir_ea2db1c5c9ef405bfa9ccf9d4f68ec9b.html  dma_8c.html  dma_8cpp.html  dma_8h.html  dma_8h_source.html  errorManagement_8c.html  errorManagement_8h.html  errorManagement_8h_source.html  files.html  functions.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_defs_c.html  globals_defs_d.html  globals_defs_e.html  globals_defs_f.html  globals_defs_g.html  globals_defs_i.html  globals_defs_p.html  globals_defs_r.html  (+36 more)
docs/latex/: addressing_8c.tex  addressing_8cpp.tex  addressing_8h.tex  annotated.tex  cacheCoherentMemoryProvider_8c.tex  cacheCoherentMemoryProvider_8cpp.tex  cacheCoherentMemoryProvider_8h.tex  clockManager_8c.tex  clockManager_8cpp.tex  clockManager_8h.tex  demo_8c.tex  dma_8c.tex  dma_8cpp.tex  (+25 more)
src/: doxygenMainPage.dox
(+149 files in other folders)
